--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,4 +1,78 @@
 /*
-
+  Estilos para la pagina web Reptile World
 */
+* {
+    margin: 0;
+    
+}
 
+.body {
+    
+}
+
+.encabezado {
+    background-color: forestgreen;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    margin-bottom: 30px;
+}
+
+.nav  {
+    display: flex;
+    padding: 40px;
+    
+}
+
+.menu {
+    display: flex; 
+}
+
+.menu-item {
+    margin-left: 50px;
+    padding-top: 40px;
+}
+
+.nav-link {
+    color: black;
+    text-decoration: none;
+    font-size: 80px;
+}
+
+.menu-link {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+h1 {
+    margin-bottom: 30px;
+    margin-top: 30px;
+    padding-left: 30px;
+}
+
+h2 {
+    margin-bottom: 30px;
+    margin-top: 30px;
+    padding-left: 30px;
+}
+
+img {
+    padding-left: 30px;
+    margin-bottom: 30px;
+}
+
+footer {
+    text-align: right;
+}
+
+iframe {
+   padding-left: 30px;
+}
+
+p {
+    padding-left: 30px;
+}
+
+a {
+    padding-left: 30px;
+}
